<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/text_smartphone_details"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="5dp">

            <EditText
                android:id="@+id/edit_smartphone_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_smartphone_name"
                android:inputType="textCapWords"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingRight="8dp"
                    android:text="@string/text_smartphone_price"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit_smartphone_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/text_hint_smartphone_price"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_smartphone_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_smartphone_quantity"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_smartphone_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_smartphone_supplier_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_smartphone_supplier_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_smartphone_supplier_phone"
                android:inputType="phone"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>